--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,13 @@ header > h1 {
   font-family: Asap, sans-serif;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
 .score-board {
   margin: 20px auto;
   border: 3px solid white;
