--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,14 @@ header > h1 {
 
 footer {
   position: absolute;
+  margin-bottom: 25px;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+}
+
+footer > a {
+  text-decoration: none;
 }
 
 .score-board {
